<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/visit_header_form_progress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/survey_height_header"
        android:gravity="left"
        android:paddingTop="@dimen/survey_act_mtop_widget"
        android:paddingLeft="@dimen/main_menu_outter_padding"
        android:background="@color/colorBlackAlpha60">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quest_register_head_title"
            android:id="@+id/txt_survey_act_title_progress"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/survey_act_mtop_widget"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Item 1 -->
            <LinearLayout
                style="@style/ProgressSurveyQuestWrap"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/ProgressSurveyQuestTextID"
                    android:text="@string/quest_register_item_1_id">
                </TextView>
                <TextView
                    style="@style/ProgressSurveyQuestTextEN"
                    android:text="@string/quest_register_item_1_en">
                </TextView>

                <RadioGroup
                    android:id="@+id/RgQuestRegisterItem1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_quest_rg_item_margin"
                    android:layout_marginBottom="@dimen/fragment_quest_rg_item_margin"
                    android:weightSum="100">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="excellent"
                        android:text="@string/general_option_excellent"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="good"
                        android:text="@string/general_option_good"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="poor"
                        android:text="@string/general_option_poor"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="very_poor"
                        android:text="@string/general_option_verypoor"
                        android:layout_weight="25"/>
                </RadioGroup>
            </LinearLayout>


            <!-- Item 2 -->
            <LinearLayout
                style="@style/ProgressSurveyQuestWrap"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/ProgressSurveyQuestTextID"
                    android:text="@string/quest_register_item_2_id">
                </TextView>
                <TextView
                    style="@style/ProgressSurveyQuestTextEN"
                    android:text="@string/quest_register_item_2_en">
                </TextView>

                <RadioGroup
                    android:id="@+id/RgQuestRegisterItem2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_quest_rg_item_margin"
                    android:layout_marginBottom="@dimen/fragment_quest_rg_item_margin"
                    android:weightSum="100">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="excellent"
                        android:text="@string/general_option_excellent"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="good"
                        android:text="@string/general_option_good"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="poor"
                        android:text="@string/general_option_poor"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="very_poor"
                        android:text="@string/general_option_verypoor"
                        android:layout_weight="25"/>
                </RadioGroup>
            </LinearLayout>


            <!-- Item 3 -->
            <LinearLayout
                style="@style/ProgressSurveyQuestWrap"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/ProgressSurveyQuestTextID"
                    android:text="@string/quest_register_item_3_id">
                </TextView>
                <TextView
                    style="@style/ProgressSurveyQuestTextEN"
                    android:text="@string/quest_register_item_3_en">
                </TextView>

                <RadioGroup
                    android:id="@+id/RgQuestRegisterItem3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_quest_rg_item_margin"
                    android:layout_marginBottom="@dimen/fragment_quest_rg_item_margin"
                    android:weightSum="100">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="excellent"
                        android:text="@string/general_option_excellent"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="good"
                        android:text="@string/general_option_good"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="poor"
                        android:text="@string/general_option_poor"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="very_poor"
                        android:text="@string/general_option_verypoor"
                        android:layout_weight="25"/>
                </RadioGroup>
            </LinearLayout>

            <!-- Item 3 -->
            <LinearLayout
                style="@style/ProgressSurveyQuestWrap"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/ProgressSurveyQuestTextID"
                    android:text="@string/quest_register_item_4_id">
                </TextView>
                <TextView
                    style="@style/ProgressSurveyQuestTextEN"
                    android:text="@string/quest_register_item_4_en">
                </TextView>

                <RadioGroup
                    android:id="@+id/RgQuestRegisterItem4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_quest_rg_item_margin"
                    android:layout_marginBottom="@dimen/fragment_quest_rg_item_margin"
                    android:weightSum="100">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="excellent"
                        android:text="@string/general_option_excellent"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="good"
                        android:text="@string/general_option_good"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="poor"
                        android:text="@string/general_option_poor"
                        android:layout_weight="25"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="very_poor"
                        android:text="@string/general_option_verypoor"
                        android:layout_weight="25"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/ButtonQuestRegisterSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_save_next"
                android:drawableRight="@mipmap/ic_chevron_right_white_24dp"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>