<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/main_menu_outter_padding"
    android:paddingRight="@dimen/main_menu_outter_padding"
    android:paddingTop="@dimen/main_menu_outter_padding"
    tools:context="com.example.dev01.cssurvey.MainActivity"
    android:padding="@dimen/main_menu_outter_padding"
    android:paddingLeft="@dimen/main_menu_outter_padding"
    android:textAlignment="center"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LogoMenu"
        android:src="@mipmap/logo_menu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_menu_logo_mtop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Survey Kepuasan Rawat Jalan"
        android:id="@+id/txt_main_title"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/colorBlue"
        android:textStyle="normal"
        android:layout_below="@+id/LogoMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_menu_survey"
        android:drawableLeft="@mipmap/ic_question_answer_white_24dp"
        android:paddingBottom="@dimen/main_menu_btn_padding"
        android:paddingTop="@dimen/main_menu_btn_padding"
        android:text="@string/main_menu_start_survey"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAlignment="center"
        android:paddingRight="@dimen/main_menu_btn_padding"
        android:paddingLeft="@dimen/main_menu_btn_padding"
        android:layout_below="@+id/txt_main_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_menu_sync"
        android:drawableLeft="@mipmap/ic_autorenew_white_24dp"
        android:paddingBottom="@dimen/main_menu_btn_padding"
        android:paddingTop="@dimen/main_menu_btn_padding"
        android:text="@string/main_menu_start_sync"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAlignment="center"
        android:paddingRight="@dimen/main_menu_btn_padding"
        android:paddingLeft="@dimen/main_menu_btn_padding"
        android:layout_below="@+id/btn_main_menu_survey"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_menu_report"
        android:drawableLeft="@mipmap/ic_chrome_reader_mode_white_24dp"
        android:paddingBottom="@dimen/main_menu_btn_padding"
        android:paddingTop="@dimen/main_menu_btn_padding"
        android:text="@string/main_menu_start_report"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAlignment="center"
        android:paddingRight="@dimen/main_menu_btn_padding"
        android:paddingLeft="@dimen/main_menu_btn_padding"
        android:layout_below="@+id/btn_main_menu_sync"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>
